--- a/src/package.json
+++ b/src/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.65.0"
+    "expo": "^42.0.3",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "~0.63.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
