--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "expo": "^42.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
